# imagechop

./: .gitignore  README.md  main.py  pyproject.toml
static/: clipboard.js  cut.js  edit.js  index.html  ocr.js
templates/: cut.html  text.html
